# oats-autonomous-agents

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  orchestrator.py  pyproject.toml  quickstart.sh
.oats/pipelines/: last_run.json
.oats/thoughts/: thought-20260401-165206.json  thought-20260401-171119.json  thought-20260401-175757.json  thought-20260401-203420.json  thought-20260401-210951.json  thought-20260401-215008.json  thought-20260401-223143.json  thought-20260401-223307.json  thought-20260401-232459.json
.orchestra/memory/: playbook.md
agents/: __init__.py  build_in_public.py  chaos_monkey.py  dream.py  event_reactor.py  results_tracker.py  synthetic_user.py  token_economist.py  verification.py
orchestra/: config.json  launch-ceo.sh  launch.sh  orchestrator.py
orchestra/ceo/: CLAUDE.md  init-prompt.md  state.md
orchestra/master/: CLAUDE.md  init-prompt.md
orchestra/memory/: playbook.md
skills/agent-experience-audit/: SKILL.md
skills/build-in-public/: SKILL.md
skills/chaos-monkey/: SKILL.md
skills/deploy-safely/: SKILL.md
skills/ed-integration/: SKILL.md
skills/ed-outreach-playbook/: SKILL.md
skills/first-revenue/: SKILL.md
skills/fstring-html-safety/: SKILL.md
tools/: __init__.py  blackboard.py  budget.py  coordinator.py  escalation.py  hooks.py  mail.py  memory_scoper.py  orchestra_skill_validator.py  pipeline.py  provoke.py  rag_seed.py  rag_server.py  reflect.py  runner.py  session_state.py  skill_loader.py  skill_validator.py  team_coordinator.py  test_harness.py  think.py  tracer.py  trust.py  user_profiler.py
(+44 files in other folders)
