[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "oats-agents"
version = "0.2.0"
description = "OATS — Autonomous Agent Framework. Everything you need to run AI agents as an autonomous team."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "oatcake21"},
]
keywords = ["ai", "agents", "autonomous", "claude", "orchestration", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/oatcake21/oats-autonomous-agents"
Repository = "https://github.com/oatcake21/oats-autonomous-agents"
Issues = "https://github.com/oatcake21/oats-autonomous-agents/issues"

[project.scripts]
oats = "orchestrator:main"

[tool.setuptools.packages.find]
include = ["agents*", "tools*", "orchestra*"]
